--- a/package.json
+++ b/package.json
@@ -1,55 +1,56 @@
 {
-  "name": "stocks",
-  "version": "1.0.0",
-  "description": "Stock tracker in Angular 2",
-  "main": "server/bootstrap.js",
-  "scripts": {
-    "start": "npm install && node ./node_modules/gulp/bin/gulp.js go",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Pranab Dhar",
-  "license": "ISC",
-  "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "^2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "^3.0.0-beta.2",
-    "@angular/router-deprecated": "^2.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.4",
-    "angular2-in-memory-web-api": "0.0.14",
-    "bootstrap": "^3.3.7",
-    "core-js": "^2.4.0",
-    "es6-shim": "^0.35.1",
-    "koa": "^1.2.1",
-    "koa-cors": "0.0.16",
-    "koa-router": "^5.4.0",
-    "koa-send": "^3.2.0",
-    "koa-static-server": "^0.1.8",
-    "promise": "^7.1.1",
-    "q": "^1.4.1",
-    "qs": "^6.2.1",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.36",
-    "yahoo-finance": "^0.2.12",
-    "zone.js": "^0.6.12"
-  },
-  "devDependencies": {
-    "del": "^2.2.1",
-    "gulp": "^3.9.1",
-    "gulp-changed": "^1.3.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-install": "^0.6.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-typescript": "^2.13.6",
-    "lite-server": "^2.2.2",
-    "minimist": "^1.2.0",
-    "run-sequence": "^1.2.2",
-    "typescript": "^1.8.10",
-    "typings": "^1.3.2"
-  }
+    "name": "stocks",
+    "version": "1.0.0",
+    "description": "Stock tracker in Angular 2",
+    "main": "server/bootstrap.js",
+    "scripts": {
+        "start": "npm install && node ./node_modules/gulp/bin/gulp.js go",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Pranab Dhar",
+    "license": "ISC",
+    "dependencies": {
+        "@angular/common": "2.0.0-rc.4", // Angular 2 packages
+        "@angular/compiler": "2.0.0-rc.4",
+        "@angular/core": "2.0.0-rc.4",
+        "@angular/forms": "0.2.0",
+        "@angular/http": "2.0.0-rc.4",
+        "@angular/platform-browser": "^2.0.0-rc.4",
+        "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+        "@angular/router": "^3.0.0-beta.2",
+        "@angular/router-deprecated": "^2.0.0-rc.2",
+        "@angular/upgrade": "2.0.0-rc.4",
+        "angular2-in-memory-web-api": "0.0.14",
+        "bootstrap": "^3.3.7",
+        "core-js": "^2.4.0",
+        "es6-shim": "^0.35.1",
+        "zone.js": "^0.6.12",
+        "reflect-metadata": "^0.1.3",
+        "rxjs": "5.0.0-beta.6",
+        "systemjs": "0.19.36",
+        "koa": "^1.2.1", // Server packages
+        "koa-cors": "0.0.16",
+        "koa-router": "^5.4.0",
+        "koa-send": "^3.2.0",
+        "koa-static-server": "^0.1.8",
+        "promise": "^7.1.1",
+        "q": "^1.4.1",
+        "qs": "^6.2.1",
+        "yahoo-finance": "^0.2.12"
+
+    },
+    "devDependencies": {
+        "del": "^2.2.1",
+        "gulp": "^3.9.1",
+        "gulp-changed": "^1.3.1",
+        "gulp-concat": "^2.6.0",
+        "gulp-install": "^0.6.0",
+        "gulp-sourcemaps": "^1.6.0",
+        "gulp-typescript": "^2.13.6",
+        "lite-server": "^2.2.2",
+        "minimist": "^1.2.0",
+        "run-sequence": "^1.2.2",
+        "typescript": "^1.8.10",
+        "typings": "^1.3.2"
+    }
 }
