--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "author": "Pranab Dhar",
     "license": "ISC",
     "dependencies": {
-        "@angular/common": "2.0.0-rc.4", // Angular 2 packages
+        "@angular/common": "2.0.0-rc.4", 
         "@angular/compiler": "2.0.0-rc.4",
         "@angular/core": "2.0.0-rc.4",
         "@angular/forms": "0.2.0",
@@ -28,7 +28,9 @@
         "reflect-metadata": "^0.1.3",
         "rxjs": "5.0.0-beta.6",
         "systemjs": "0.19.36",
-        "koa": "^1.2.1", // Server packages
+
+        
+        "koa": "^1.2.1", 
         "koa-cors": "0.0.16",
         "koa-router": "^5.4.0",
         "koa-send": "^3.2.0",
