--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,5 +20,43 @@
         "sourceMapPathOverrides": {
             "/source/*": "${workspaceRoot}/client/*"
         }
+    }, {
+        "name": "Launch NodeJS Server",
+        "type": "node",
+        "request": "launch",
+        "program": "${workspaceRoot}/dist/server/system-express.js",
+        "stopOnEntry": false,
+        "args": [],
+        "cwd": "${workspaceRoot}",
+        "preLaunchTask": null,
+        "runtimeExecutable": null,
+        "runtimeArgs": [
+            "--nolazy"
+        ],
+        "env": {
+            "NODE_ENV": "development"
+        },
+        "externalConsole": false,
+        "sourceMaps": true,
+        "outDir": null
+    }, {
+        "name": "Attach to NodeJS",
+        "type": "node",
+        "request": "attach",
+        "port": 5858,
+        "address": "localhost",
+        "restart": false,
+        "sourceMaps": false,
+        "outDir": null,
+        "localRoot": "${workspaceRoot}",
+        "remoteRoot": null
+    }, {
+        "name": "Attach to Node Process",
+        "type": "node",
+        "request": "attach",
+        "processId": "${command.PickProcess}",
+        "port": 5858,
+        "sourceMaps": false,
+        "outDir": null
     }]
 }
