--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "koa": "server/bootstrap-koa.js",
     "scripts": {
         "start": "npm install && node ./node_modules/gulp/bin/gulp.js go",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "tslint": "tslint -c tslint.json **/*.ts"
     },
     "author": "Pranab Dhar",
     "license": "ISC",
@@ -48,10 +49,12 @@
         "gulp-concat": "^2.6.0",
         "gulp-install": "^0.6.0",
         "gulp-sourcemaps": "^1.6.0",
+        "gulp-tslint": "^6.0.2",
         "gulp-typescript": "^2.13.6",
         "lite-server": "^2.2.2",
         "minimist": "^1.2.0",
         "run-sequence": "^1.2.2",
+        "tslint": "^3.14.0",
         "typescript": "^1.8.10",
         "typings": "^1.3.2"
     }
