--- a/package.json
+++ b/package.json
@@ -6,27 +6,31 @@
     "express": "server/bootstrap-express.js",
     "koa": "server/bootstrap-koa.js",
     "scripts": {
-        "start": "npm install && node ./node_modules/gulp/bin/gulp.js go",
+        "startOld": "npm install && node ./node_modules/gulp/bin/gulp.js go",
+        "start": "gulp go",
         "test": "echo \"Error: no test specified\" && exit 1",
         "tslint": "tslint -c tslint.json **/*.ts"
     },
     "author": "Pranab Dhar",
     "license": "ISC",
     "dependencies": {
-        "@angular/common": "2.0.0-rc.4",
-        "@angular/compiler": "2.0.0-rc.4",
-        "@angular/core": "2.0.0-rc.4",
-        "@angular/forms": "0.2.0",
-        "@angular/http": "2.0.0-rc.4",
-        "@angular/platform-browser": "^2.0.0-rc.4",
-        "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-        "@angular/router": "^3.0.0-beta.2",
-        "@angular/router-deprecated": "^2.0.0-rc.2",
-        "@angular/upgrade": "2.0.0-rc.4",
-        "angular2-in-memory-web-api": "0.0.14",
-        "bootstrap": "^3.3.7",
+        "@angular/common": "2.0.0-rc.5",
+        "@angular/compiler": "^2.0.0-rc.5",
+        "@angular/core": "2.0.0-rc.5",
+        "@angular/forms": "0.3.0",
+        "@angular/http": "2.0.0-rc.5",
+        "@angular/platform-browser": "2.0.0-rc.5",
+        "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+        "@angular/router": "^3.0.0-rc.1",
+        "@angular/router-deprecated": "2.0.0-rc.2",
+        "@angular/upgrade": "2.0.0-rc.5",
+        "angular2-in-memory-web-api": "0.0.15",
+        "bootstrap": "^3.3.6",
         "core-js": "^2.4.0",
-        "es6-shim": "^0.35.1",
+        "reflect-metadata": "^0.1.3",
+        "rxjs": "5.0.0-beta.6",
+        "systemjs": "0.19.27",
+        "zone.js": "^0.6.12",
         "express": "^4.14.0",
         "koa": "^1.2.1",
         "koa-cors": "0.0.16",
@@ -36,11 +40,7 @@
         "promise": "^7.1.1",
         "q": "^1.4.1",
         "qs": "^6.2.1",
-        "reflect-metadata": "^0.1.3",
-        "rxjs": "5.0.0-beta.6",
-        "systemjs": "0.19.36",
-        "yahoo-finance": "^0.2.12",
-        "zone.js": "^0.6.12"
+        "yahoo-finance": "^0.2.12"
     },
     "devDependencies": {
         "del": "^2.2.1",
