--- a/package.json
+++ b/package.json
@@ -1,61 +1,73 @@
 {
-    "name": "stocks",
-    "version": "1.0.0",
-    "description": "Stock tracker in Angular 2",
-    "main": "server/bootstrap.js",
-    "express": "server/bootstrap-express.js",
-    "koa": "server/bootstrap-koa.js",
-    "scripts": {
-        "startOld": "npm install && node ./node_modules/gulp/bin/gulp.js go",
-        "start": "gulp go",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "tslint": "tslint -c tslint.json **/*.ts"
-    },
-    "author": "Pranab Dhar",
-    "license": "ISC",
-    "dependencies": {
-        "@angular/common": "2.0.0-rc.5",
-        "@angular/compiler": "^2.0.0-rc.5",
-        "@angular/core": "2.0.0-rc.5",
-        "@angular/forms": "0.3.0",
-        "@angular/http": "2.0.0-rc.5",
-        "@angular/platform-browser": "2.0.0-rc.5",
-        "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-        "@angular/router": "^3.0.0-rc.1",
-        "@angular/router-deprecated": "2.0.0-rc.2",
-        "@angular/upgrade": "2.0.0-rc.5",
-        "angular2-in-memory-web-api": "0.0.15",
-        "bootstrap": "^3.3.6",
-        "core-js": "^2.4.0",
-        "reflect-metadata": "^0.1.3",
-        "rxjs": "5.0.0-beta.6",
-        "systemjs": "0.19.27",
-        "zone.js": "^0.6.12",
-        "express": "^4.14.0",
-        "koa": "^1.2.1",
-        "koa-cors": "0.0.16",
-        "koa-router": "^5.4.0",
-        "koa-send": "^3.2.0",
-        "koa-static-server": "^0.1.8",
-        "promise": "^7.1.1",
-        "q": "^1.4.1",
-        "qs": "^6.2.1",
-        "yahoo-finance": "^0.2.12"
-    },
-    "devDependencies": {
-        "del": "^2.2.1",
-        "gulp": "^3.9.1",
-        "gulp-changed": "^1.3.1",
-        "gulp-concat": "^2.6.0",
-        "gulp-install": "^0.6.0",
-        "gulp-sourcemaps": "^1.6.0",
-        "gulp-tslint": "^6.0.2",
-        "gulp-typescript": "^2.13.6",
-        "lite-server": "^2.2.2",
-        "minimist": "^1.2.0",
-        "run-sequence": "^1.2.2",
-        "tslint": "^3.14.0",
-        "typescript": "^1.8.10",
-        "typings": "^1.3.2"
-    }
+  "name": "stocks",
+  "version": "1.0.0",
+  "description": "Stock tracker in Angular 2",
+  "main": "server/bootstrap.js",
+  "express": "server/bootstrap-express.js",
+  "koa": "server/bootstrap-koa.js",
+  "scripts": {
+    "startOld": "npm install && node ./node_modules/gulp/bin/gulp.js go",
+    "start": "gulp go",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tslint": "tslint -c tslint.json **/*.ts"
+  },
+  "author": "Pranab Dhar",
+  "license": "ISC",
+  "dependencies": {
+    "@angular/common": "~2.1.0",
+    "@angular/compiler": "~2.1.0",
+    "@angular/core": "~2.1.0",
+    "@angular/forms": "~2.1.0",
+    "@angular/http": "~2.1.0",
+    "@angular/platform-browser": "~2.1.0",
+    "@angular/platform-browser-dynamic": "~2.1.0",
+    "@angular/router": "~3.1.0",
+    "@angular/router-deprecated": "~2.0.0-rc.2",
+    "@angular/upgrade": "~2.1.0",
+    "@types/core-js": "^0.9.34",
+    "@types/express": "^4.0.33",
+    "@types/jquery": "^2.0.33",
+    "@types/minimist": "^1.1.29",
+    "@types/node": "^6.0.45",
+    "@types/serve-static": "^1.7.31",
+    "@types/systemjs": "^0.19.31",
+    "@types/typescript": "^0.4.29",
+    "angular2-in-memory-web-api": "~0.0.21",
+    "bootstrap": "^3.3.7",
+    "core-js": "^2.4.1",
+    "express": "^4.14.0",
+    "jquery": "^3.1.0",
+    "koa": "^1.2.1",
+    "koa-cors": "0.0.16",
+    "koa-router": "^5.4.0",
+    "koa-send": "^3.2.0",
+    "koa-static-server": "^0.1.8",
+    "lite-server": "^2.2.2",
+    "plugin-typescript": "^5.2.7",
+    "promise": "^7.1.1",
+    "q": "^1.4.1",
+    "qs": "^6.2.1",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.0-beta.12",
+    "systemjs": "0.19.39",
+    "typescript": "^2.0.6",
+    "yahoo-finance": "^0.2.12",
+    "zone.js": "^0.6.25"
+  },
+  "devDependencies": {
+    "del": "^2.2.1",
+    "gulp": "^3.9.1",
+    "gulp-changed": "^1.3.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-install": "^0.6.0",
+    "gulp-sourcemaps": "^2.2.0",
+    "gulp-tslint": "^6.1.3",
+    "gulp-typescript": "^3.1.2",
+    "lite-server": "^2.2.2",
+    "minimist": "^1.2.0",
+    "run-sequence": "^1.2.2",
+    "tslint": "^3.15.1",
+    "typescript": "^2.0.6",
+    "typings": "^1.5.0"
+  }
 }
