--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -46,7 +46,7 @@
         "port": 5858,
         "address": "localhost",
         "restart": false,
-        "sourceMaps": false,
+        "sourceMaps": true,
         "outDir": null,
         "localRoot": "${workspaceRoot}",
         "remoteRoot": null
