--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
             "rxjs",
             "router",
             "http",
-            "core"
+            "core",
+            "node"
         ]
     },
     "exclude": [
