--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   "author": "Pranab Dhar",
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "~2.2.2",
-    "@angular/compiler": "~2.2.2",
-    "@angular/core": "~2.2.2",
-    "@angular/forms": "~2.2.2",
-    "@angular/http": "~2.2.2",
-    "@angular/platform-browser": "~2.2.2",
-    "@angular/platform-browser-dynamic": "~2.2.2",
-    "@angular/router": "~3.2.2",
-    "@angular/upgrade": "~2.2.2",
+    "@angular/common": "~2.4.2",
+    "@angular/compiler": "~2.4.2",
+    "@angular/core": "~2.4.2",
+    "@angular/forms": "~2.4.2",
+    "@angular/http": "~2.4.2",
+    "@angular/platform-browser": "~2.4.2",
+    "@angular/platform-browser-dynamic": "~2.4.2",
+    "@angular/router": "~3.4.2",
+    "@angular/upgrade": "~2.4.2",
     "@types/core-js": "^0.9.34",
     "@types/express": "^4.0.33",
     "@types/jquery": "^2.0.33",
@@ -31,7 +31,7 @@
     "@types/serve-static": "^1.7.31",
     "@types/systemjs": "^0.19.31",
     "@types/typescript": "^0.4.29",
-    "angular-in-memory-web-api": "~0.1.15",
+    "angular-in-memory-web-api": "~0.2.4",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
@@ -48,10 +48,10 @@
     "q": "^1.4.1",
     "qs": "^6.2.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.0.1",
     "systemjs": "0.19.41",
     "yahoo-finance": "^0.2.12",
-    "zone.js": "^0.6.26"
+    "zone.js": "^0.7.1"
   },
   "devDependencies": {
     "del": "^2.2.1",
@@ -65,7 +65,7 @@
     "lite-server": "^2.2.2",
     "minimist": "^1.2.0",
     "run-sequence": "^1.2.2",
-    "tslint": "^3.15.1",
+    "tslint": "^4.3.1",
     "typescript": "^2.0.10",
     "typings": "^1.5.0"
   }
